--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/framework": "^9.0",
         "laravel/sanctum": "^2.14",
         "laravel/tinker": "^2.7",
+        "nesbot/carbon": "^2.67",
         "spatie/laravel-sluggable": "^3.5"
     },
     "require-dev": {
