--- a/vue/package.json
+++ b/vue/package.json
@@ -12,6 +12,7 @@
     "@headlessui/vue": "^1.7.13",
     "@heroicons/vue": "^2.0.18",
     "@tailwindcss/forms": "^0.5.3",
+    "@types/leaflet": "^1.9.3",
     "axios": "^1.4.0",
     "vue": "^3.2.47",
     "vue-router": "^4.0.13",
@@ -19,7 +20,9 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.1.0",
+    "@vue-leaflet/vue-leaflet": "^0.9.0",
     "autoprefixer": "^10.4.14",
+    "leaflet": "^1.9.4",
     "postcss": "^8.4.23",
     "tailwindcss": "^3.3.2",
     "vite": "^4.3.2"
