--- a/vue/package.json
+++ b/vue/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/forms": "^0.5.3",
     "@types/leaflet": "^1.9.3",
     "axios": "^1.4.0",
+    "leaflet.markercluster": "^1.5.3",
     "vue": "^3.2.47",
     "vue-router": "^4.0.13",
     "vuex": "^4.0.2"
