--- a/composer.json
+++ b/composer.json
@@ -10,12 +10,15 @@
     "require": {
         "php": "^8.0",
         "backpack/crud": "5.6.1",
+        "beyondcode/laravel-websockets": "2.0.0-beta.37",
         "fruitcake/laravel-cors": "^2.0.5",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.0",
         "laravel/sanctum": "^2.14",
         "laravel/tinker": "^2.7",
         "nesbot/carbon": "^2.67",
+        "psr/log": "~1.0",
+        "pusher/pusher-php-server": "6.1.0",
         "spatie/laravel-sluggable": "^3.5"
     },
     "require-dev": {
