--- a/vue/package.json
+++ b/vue/package.json
@@ -14,7 +14,9 @@
     "@tailwindcss/forms": "^0.5.3",
     "@types/leaflet": "^1.9.3",
     "axios": "^1.4.0",
+    "laravel-echo": "^1.15.2",
     "leaflet.markercluster": "^1.5.3",
+    "pusher-js": "^8.3.0",
     "vue": "^3.2.47",
     "vue-router": "^4.0.13",
     "vuex": "^4.0.2"
